Dibuat menggunakan Colab

--- a/learn_1_python.ipynb
+++ b/learn_1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcTHST+kt7zShdw3OrVOSZ",
+      "authorship_tag": "ABX9TyPOJKyqBWynQA/bo7v/YgnF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,22 +29,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "materi pertama pembelajaran tentang python"
+        "materi pertama pembelajaran tentang paython"
       ],
       "metadata": {
-        "id": "rkVOouA0LpsR"
+        "id": "xZieoxQn8xEN"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "a=5\n",
+        "b=10\n",
+        "c=a+b\n",
+        "print (c)\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SJceUNM9LZVT",
-        "outputId": "3ac5ffb9-b173-4923-fce3-e41308801e48"
+        "id": "abrlYfcL66GQ",
+        "outputId": "e3f345a1-bacf-4bb9-9b71-c30b2492031a"
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,13 +59,16 @@
             "15\n"
           ]
         }
-      ],
-      "source": [
-        "a=5\n",
-        "b=10\n",
-        "c=a+b\n",
-        "print (c)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bagian Baru"
+      ],
+      "metadata": {
+        "id": "DpBntMnv8Z7m"
+      }
     }
   ]
 }
